// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ppx integration > builds a package that uses a ppx 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/with-ppx]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=1]",
  "    build.parse[dirty_modules=1]",
  "      build.parse_file[module=User, package=@rewatch-test/with-ppx, ppx=noop-ppx/bin]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=User, package=@rewatch-test/with-ppx, suffix=.mjs, module_system=esmodule]",
]
`;

exports[`ppx integration > does not include ppx flags in compiler args 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/with-ppx]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=1]",
  "    build.parse[dirty_modules=1]",
  "      build.parse_file[module=User, package=@rewatch-test/with-ppx, ppx=noop-ppx/bin]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=User, package=@rewatch-test/with-ppx, suffix=.mjs, module_system=esmodule]",
  "rewatch.compiler_args[file_path=src/User.res]",
]
`;

exports[`ppx integration > includes ppx flags in parser args 1`] = `
[
  "rewatch.build[working_dir=.]",
  "  initialize_build",
  "    packages.make",
  "      build.load_package_sources[package=@rewatch-test/with-ppx]",
  "    packages.parse_packages",
  "    clean.cleanup_previous_build",
  "  incremental_build[module_count=1]",
  "    build.parse[dirty_modules=1]",
  "      build.parse_file[module=User, package=@rewatch-test/with-ppx, ppx=noop-ppx/bin]",
  "    build.compile",
  "      build.compile_wave[file_count=1]",
  "        build.compile_file[module=User, package=@rewatch-test/with-ppx, suffix=.mjs, module_system=esmodule]",
  "rewatch.compiler_args[file_path=src/User.res]",
]
`;
